# rust-learning

./: .gitee-ci.yml  .gitignore  LICENSE  README.md  index.html  measure-svg.mjs  render-check.cjs
.gitee/: pipelines.yml
.gitee/workflows/: deploy.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile.playground
backend/src/: Cargo.lock.playground  main.rs
css/: style.css
docs/superpowers/plans/: 2026-07-14-expand-chapters.md  2026-07-14-gitee-ci-deployment.md  2026-07-16-rust-philosophy-svg-illustrations.md
docs/superpowers/specs/: 2026-07-14-expand-chapters-design.md  2026-07-14-gitee-ci-deployment-design.md  2026-07-16-rust-philosophy-svg-illustrations-design.md  2026-07-17-comments-operators-svg-design.md  2026-07-18-chapter-title-keywords-design.md  2026-07-18-rust-vs-other-languages-qa-design.md
images/: _review.html
js/: app.js  chapters.json
libs/: codemirror-bundle.js
scripts/: deploy-backend.sh  deploy-frontend.sh  validate_chapters.py
systemd/: rust-learning-backend.service
