[package]
name = "rust-learning-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
